--- a/public/play.html
+++ b/public/play.html
@@ -4,9 +4,23 @@
 		<meta charset="UTF-8">
 		<title></title>
 		<link rel="stylesheet" href="./style.css">
+		<link rel="stylesheet" href="./waiting.css">
 	</head>
 	<body>
-		<div id="topBar">
+		<!-- waiting thing -->
+		<div id="waiting" class="">
+			<div class="wave"></div>
+			<div class="wave"></div>
+			<div class="wave"></div>
+			<div class="wave"></div>
+			<div class="wave"></div>
+			<div class="wave"></div>
+			<div class="wave"></div>
+			<div class="wave"></div>
+			<div class="wave"></div>
+			<div class="wave"></div>
+		</div>
+		<div id="topBar" class="visible">
 			<h1 id="labelSongCounter">
 				CANZONI INDOVINATE: 
 				<span id="songCounter">
@@ -25,11 +39,12 @@
 
 		<img id="imgAlbum" src="" >
 		<form>
-			<input type="text" id="inputForRefresh" name="">
 			<input type="text" id="songNameInput" placeholder="Indovina la canzone" name="songNameInput" value="">
 			<label for="songNameInput"></label>
+			<input type="text" id="artistNameInput" placeholder="Seleziona l'artista" name="songNameInput" value="">
 		</form>
 		<div id="submitBtn" >Submit</div>
+		<div id="findArtistBtn" >Cerca Autore</div>
 
 		<div id="playStopBtns">
 			<div id="playBtn">Play</div>
