--- a/public/play.html
+++ b/public/play.html
@@ -21,14 +21,15 @@
 			<div class="wave"></div>
 			<div class="wave"></div>
 		</div>
-		<div id="topBar" class="visible">
-			<div id="containerArtistInput">
-				<input name="artistNameInput" type="text" id="artistNameInput" placeholder="Inserisci l'artista" name="songNameInput" value="">
-				<div id="findArtistBtn" >
-					<i class="fa-solid fa-magnifying-glass"></i>
-				</div>
+
+		<div id="containerArtistInput">
+			<input name="artistNameInput" type="text" id="artistNameInput" placeholder="Inserisci l'artista" name="songNameInput" value="">
+			<div id="findArtistBtn" >
+				<i class="fa-solid fa-magnifying-glass"></i>
 			</div>
-			
+		</div>
+
+		<div id="topBar" class="visible">
 			<div id="labelSongCounter">
 				Canzoni indovinate: 
 				<span id="songCounter">
@@ -46,6 +47,7 @@
 		</div>
 
 		<img id="imgAlbum" src="" >
+		<div id="sceltaSbagliata">Canzone sbagliata</div>
 		<div id="containerSong">
 			<input type="text" id="songNameInput" placeholder="Scrivi il titolo" name="songNameInput" value="">
 			<div id="submitBtn">
