--- a/public/play.html
+++ b/public/play.html
@@ -46,8 +46,10 @@
 			</div>
 		</div>
 
-		<img id="imgAlbum" src="" >
-		<div id="sceltaSbagliata">Canzone sbagliata</div>
+		<img id="imgAlbum" src="data:image/svg+xml;charset=utf8,%3Csvg%20xmlns='http://www.w3.org/2000/svg'%3E%3C/svg%3E">
+		<div id="playBtn">
+			<i class="fa-solid fa-play"></i>
+		</div>
 		<div id="containerSong">
 			<input type="text" id="songNameInput" placeholder="Scrivi il titolo" name="songNameInput" value="">
 			<div id="submitBtn">
